--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
+    "react-s3": "^1.3.1",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.3",
     "web-vitals": "^1.0.1"
